Navigation sizes on mobile devices fixed
The special case here is navigation in the homepage

--- a/source/stylesheets/_responsive.css.scss
+++ b/source/stylesheets/_responsive.css.scss
@@ -1,7 +1,7 @@
 /* Responsive overrides */
 
 @media (max-width: 979px) {
-	.navbar-fixed-top {
+	.homepage-body .navbar-fixed-top {
 		margin: 0;
 	}
 }
